@@ -51,7 +51,7 @@ signals:
 private slots:
     void SaveFilesToDelete();
     void WriteSettings();
-    void DoubleClick();
+    void DoubleClick(const QModelIndex index);
 
 private:
     void SetUpTable();
